hphp/hack/test/typecheck/reified_generics/reifiable3.php.like_types.exp
File "reifiable3.php", line 10, characters 28-43:
Invalid type (Typing[4322])
File "reifiable3.php", line 9, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 10, characters 32-42:
It cannot contain an array
File "reifiable3.php", line 20, characters 13-13:
Class D does not correctly implement all required members  (Typing[4322])
File "reifiable3.php", line 20, characters 23-23:
Some members are incompatible with those declared in type C
Read the following to see why:
File "reifiable3.php", line 21, characters 19-36:
Invalid type
File "reifiable3.php", line 6, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 21, characters 25-35:
It cannot contain an array
File "reifiable3.php", line 21, characters 19-36:
Invalid type (Typing[4322])
File "reifiable3.php", line 6, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 21, characters 25-35:
It cannot contain an array
File "reifiable3.php", line 27, characters 29-31:
Invalid constraint (Typing[4322])
File "reifiable3.php", line 26, characters 5-15:
This type constant has the __Reifiable attribute
File "reifiable3.php", line 27, characters 29-31:
It cannot contain an array
